feat(booking): rework booking, rescheduling and cancellation to match the clinic flows
A visit is now booked in one call carrying every treatment chosen for it, and a
different time is a cancellation plus a fresh booking rather than a separate
reschedule endpoint. Slot search answers for every qualified doctor at once and
never offers a time the confirm would refuse.

Booking
- POST /api/appointments takes a list of treatments, capped at ten, all on one day
- a booking may name the visit it replaces; the old one is cancelled in the same
  transaction, so a lost slot cannot leave the patient with neither
- treatment length always comes from the tariff; callers no longer pass one
- the requested treatments are checked against each other before anything is written
- the patient's row is locked before any of the reads that decide the booking

Slot search
- POST /api/appointments/free-slots, a body because it carries picks not yet stored
- optional doctor: absent asks every doctor qualified for the treatment
- excludes the caller's other bookings, earlier picks, and the visit being replaced
- filtered by notice and horizon, so the list matches what booking will accept

Health form
- new PUT /api/patients/me/clinical, the only route a patient can fill their own
- skin type is now required and marks the form as filled
- booking refuses a blank form, which previously no patient could clear

Cancellation
- a patient may change a visit until midnight before its day; staff until it starts
- cancelling the last treatment closes the visit
- a visit holding completed work cannot be cancelled around it
- the patient's list hides visits that were superseded by a reschedule

Availability
- overrides now apply on top of the weekly pattern instead of being merged with it
- an override must carry an end date, or one sick day hides a doctor for good

Concurrency and errors
- session status changes take a row lock, so two of them cannot both win
- a lost slot returns 409 with its reason,